src/objects/Target__c.object
<CustomObject>
    <fields>
        <fullName>CM_Remaining_Target__c</fullName>
        <description>Enables Target YTD calculation</description>
        <formula>IF(
  MONTH(Month_End_Date__c) = MONTH(TODAY()),
  Target__c /  
  /* calculate the number of days in this month 
  */
  IF(
    MONTH( TODAY() ) = 12,
    31,
    DAY(
        DATE( YEAR( TODAY() ), MONTH ( TODAY() ) + 1, 1 ) 
         - 1 )
    )
  *
  (DATE(YEAR( TODAY() ), MONTH( TODAY() ) + 1, 1) - TODAY() ),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Target remaining after today, if the Target record Month End Date is in this month</inlineHelpText>
        <label>CM Remaining Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CY_Remaining_Target__c</fullName>
        <description>Can be totaled up in a report &amp; subtracted from Target figure for year to calculate YTD target</description>
        <formula>/* only display value for Targets this year &amp; for a month greater or equal to today&apos;s */

IF(
  AND(
    YEAR(Month_End_Date__c) = YEAR(TODAY()),
    MONTH(Month_End_Date__c) = MONTH(TODAY())
    ),
  CM_Remaining_Target__c,
  IF(
    AND(
      YEAR(Month_End_Date__c) = YEAR(TODAY()),
      MONTH(Month_End_Date__c) &gt; MONTH(TODAY())
      ),
    Target__c,
    null
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CY Remaining Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Type__c</fullName>
        <description>Substitute for new Record Type, while picklist values and page layouts are the same for both types of target</description>
        <inlineHelpText>Close Date value is sales target. Created Date value is pipeline target.</inlineHelpText>
        <label>Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created Date</fullName>
                </value>
                <value>
                    <fullName>Close Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <description>Referenced in Apex Trigger to match correct Target record with Opportunity</description>
        <formula>TEXT(Date_Type__c) + &apos;-&apos; + Salesperson__c + &apos;-&apos; + TEXT(MONTH(Month_End_Date__c)) + &apos;-&apos; + TEXT(YEAR(Month_End_Date__c))</formula>
        <label>Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(
MONTH(Month_End_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;
)</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>450</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use in report filters, now that team leader&apos;s targets may include revenue needed to meet budget, on top of the total from individual&apos;s sales targets</description>
        <label>Team Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_MT_Identifier__c</fullName>
        <description>Referenced in Apex Trigger to match correct Target amount with other team member&apos;s, for monthly team target calculation</description>
        <formula>TEXT(Date_Type__c) + &apos;-&apos; + TEXT(Team__c) + &apos;-&apos; + TEXT(MONTH(Month_End_Date__c)) + &apos;-&apos; + TEXT(YEAR(Month_End_Date__c))</formula>
        <label>Team MT Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Target__c</fullName>
        <inlineHelpText>Calculate by code, will be overwritten whenever a record&apos;s Target field is changed</inlineHelpText>
        <label>Team Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Virtual New Verticals EU</fullName>
                </value>
                <value>
                    <fullName>Virtual Partnerships EU</fullName>
                </value>
                <value>
                    <fullName>Virtual RM EU</fullName>
                </value>
                <value>
                    <fullName>Virtual RM NA</fullName>
                </value>
                <value>
                    <fullName>Virtual Sales EU</fullName>
                </value>
                <value>
                    <fullName>Virtual Sales NA</fullName>
                </value>
                <value>
                    <fullName>Virtual Travel Sales EU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X90_Day_Target__c</fullName>
        <description>Calculates rolling 90 day target, updated each day. Sum of values from all Target records is 90 day Target.</description>
        <formula>(
  IF(
    /* calculate number of applicable days in month */
    IF(
      OR((
        (Month_End_Date__c-TODAY()) + 
        IF(
          MONTH(Month_End_Date__c)=2,1,0
          ))&gt;120,
        (Month_End_Date__c-TODAY())&lt;0
        ),
        0,
      IF(
        AND(
            (Month_End_Date__c-TODAY())&gt;=90,
            (Month_End_Date__c-TODAY())&lt;=120
            ),
        DAY(Month_End_Date__c)-((Month_End_Date__c-TODAY())-90),
        MIN((Month_End_Date__c-TODAY()),Month_End_Date__c-DATE(YEAR(Month_End_Date__c),MONTH(Month_End_Date__c),1)+1)
      )
    /* if month is February, negative number could be returned */
    )&lt;0,
    0,
    IF(
      OR((
        (Month_End_Date__c-TODAY()) + 
        IF(
          MONTH(Month_End_Date__c)=2,1,0
          ))&gt;120,
        (Month_End_Date__c-TODAY())&lt;0
        ),
        0,
      IF(
        AND(
            (Month_End_Date__c-TODAY())&gt;=90,
            (Month_End_Date__c-TODAY())&lt;=120
            ),
        DAY(Month_End_Date__c)-((Month_End_Date__c-TODAY())-90),
        MIN((Month_End_Date__c-TODAY()),Month_End_Date__c-DATE(YEAR(Month_End_Date__c),MONTH(Month_End_Date__c),1)+1)
      )
    ))
  /* calculate applicable days as a % of days in month */
  /
  DAY(DATE(YEAR(Month_End_Date__c),MONTH(Month_End_Date__c)+1,1)-1)
)
/* multiply by monthly target */
* Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 Day Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(Year_End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Type__c</columns>
        <columns>Month_End_Date__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Target__c</columns>
        <columns>Team__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Year__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_B2B_Targets_2016</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual New Verticals EU</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>EU B2B Targets 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_B2B_Targets_2017</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual New Verticals EU</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>EU B2B Targets 2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_B2B_Targets_2018</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual New Verticals EU</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>EU B2B Targets 2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Partnerships_Targets_2016</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual Partnerships EU</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>EU Partnerships Targets 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Pipeline_Targets_2016</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team_Leader__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Date_Type__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Created Date</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>EU Pipeline Targets 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_RM_Close_Date_Targets_2016</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual RM EU</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Close Date</value>
        </filters>
        <label>EU RM Close Date Targets 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_RM_Close_Date_Targets_2017</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Month_End_Date__c</columns>
        <columns>Year_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual RM EU</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Close Date</value>
        </filters>
        <label>EU RM Close Date Targets 2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_RM_Close_Date_Targets_2018</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Month_End_Date__c</columns>
        <columns>Year_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual RM EU</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Close Date</value>
        </filters>
        <label>EU RM Close Date Targets 2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_RM_Created_Date_Targets_2016</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual RM EU</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Created Date</value>
        </filters>
        <label>EU RM Created Date Targets 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Sales_Close_Date_Targets_2016</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team_Leader__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>X90_Day_Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Date_Type__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual New Verticals EU,Virtual Travel Sales EU</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Close Date</value>
        </filters>
        <label>EU Sales Close Date Targets 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Sales_Close_Date_Targets_2017</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team_Leader__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>X90_Day_Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Date_Type__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual New Verticals EU,Virtual Travel Sales EU</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Close Date</value>
        </filters>
        <label>EU Sales Close Date Targets 2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Sales_Close_Date_Targets_2018</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team_Leader__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>X90_Day_Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Date_Type__c</columns>
        <columns>Month_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual New Verticals EU,Virtual Travel Sales EU</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Close Date</value>
        </filters>
        <label>EU Sales Close Date Targets 2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Sales_Created_Date_Targets_2016</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team_Leader__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>X90_Day_Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Date_Type__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual New Verticals EU,Virtual Travel Sales EU</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Created Date</value>
        </filters>
        <label>EU Sales Created Date Targets 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU_Sales_Created_Date_Targets_2017</fullName>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Team_Leader__c</columns>
        <columns>Team__c</columns>
        <columns>Target__c</columns>
        <columns>X90_Day_Target__c</columns>
        <columns>Team_Target__c</columns>
        <columns>Date_Type__c</columns>
        <columns>Month_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Virtual New Verticals EU,Virtual Travel Sales EU</value>
        </filters>
        <filters>
            <field>Date_Type__c</field>
            <operation>equals</operation>
            <value>Created Date</value>
        </filters>
        <label>EU Sales Created Date Targets 2017</label>
        <language>en_US</language>
    </listViews>
</CustomObject>